Specify the video size as 720p in the v4l2rtspserver configuration file.

--- a/v4l2rtspserver.service.in
+++ b/v4l2rtspserver.service.in
@@ -6,7 +6,7 @@ After=network.target
 Type=simple
 Restart=always
 RestartSec=5
-ExecStart=@CMAKE_INSTALL_PREFIX@/bin/@PROJECT_NAME@ -u media/stream2 -P 554 /dev/video2
+ExecStart=@CMAKE_INSTALL_PREFIX@/bin/@PROJECT_NAME@ -W 1280 -H 720 -u media/stream2 -P 554 /dev/video0
 WorkingDirectory=@CMAKE_INSTALL_PREFIX@/share/@PROJECT_NAME@
 StandardOutput=file:/var/log/v4l2rtspserver1.log
 StandardError=file:/var/log/v4l2rtspserver2.log
